--- a/painel/central/static/css/sidebar.css
+++ b/painel/central/static/css/sidebar.css
@@ -12,12 +12,14 @@
     right: 0;
     z-index: 1000;
     transition: all 0.6s ease;
+    margin-left: 250px;
 }
 
 /* Ajuste da navbar quando a sidebar está minimizada */
 .navbar-header.sidebar-minimized {
     width: calc(100vw - 80px);
     transition: all 0.6s ease;
+    margin-left: 80px;
 }
 
 /* Navbar normal quando a sidebar está expandida */
@@ -49,6 +51,7 @@
     z-index: 1001;
     transition: all 0.6s ease;
     overflow: auto;
+
 }
 
 .vertical-menu.minimized {
@@ -106,6 +109,10 @@
 
 .main-content.sidebar-minimized {
     margin-left: 80px;
+}
+
+.vertical-menu, .navbar-header {
+    top: 0;  /* Certifica que ambos estão alinhados no topo */
 }
 
 /* Mobile Adjustments */
